k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world 
  template:
    metadata:
      labels:
        app: hello-world  
    spec:            
      containers: 
      - name: hello-world 
        image: us.gcr.io/sprints-lab/hello-world:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50"
            memory: "256Mi"
          limits:
            cpu: "70"
            memory: "512Mi"
