k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world  
    spec:            
      containers: 
      - name: hello-world 
        image: us.gcr.io/sprints-lab/hello-world:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
